[package]
name = "reviewer"
version = "0.0.26"
edition = "2024"
description = "Transparent PR review orchestration with Codex or Claude subprocesses"
repository = "https://github.com/TheBuilderJR/reviewer"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.50", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.17.11"
regex = "1.12.2"
schemars = { version = "1.1.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }
